2016-11-13  Barton E. Schaefer  <schaefer@zsh.org>

	* 39929: Doc/Zsh/zle.yo: clarify execute{,-last}-named-cmd

2016-11-12  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Etc/zsh-development-guide: add list of standard
	module hooks with corresponding macro names

2016-11-12  Oliver Kiddle  <opk@zsh.org>

	* Paul Seyfert: 39920: Completion/Redhat/Command/_yum:
	extend yum completion to cover more yum commands

2016-11-10  Barton E. Schaefer  <schaefer@zsh.org>

	* 39893: Src/params.c: use arrdup_max() to show explicitly the
	difference in two code branches; no functional change

2016-11-11  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39874/0002 plus size=0 handling: Src/mem.c: zshcalloc: Remove
	code duplication. No functional change.

	* 39874/0001: Src/params.c: setarrvalue: Remove needless
	initialization.

2016-11-10  Peter Stephenson  <p.stephenson@samsung.com>

	* 39901: Src/exec.c, Test/C03traps.ztst: Exiting the left hand
	side of a pipeline shouldn't trigger EXIT trap.

2016-11-09  Oliver Kiddle  <opk@zsh.org>

	* 39890: Completion/Debian/Command/_git-buildpackage,
	Completion/Debian/Command/_lintian,
	Completion/Debian/Command/_make-kpkg,
	Completion/Linux/Command/_iwconfig,
	Completion/Debian/Command/_dcut, Completion/Linux/Command/_mdadm,
	Completion/Solaris/Command/_dladm, Completion/Unix/Command/_adb,
	Completion/Unix/Command/_attr, Completion/Unix/Command/_awk,
	Completion/Unix/Command/_bzr, Completion/Unix/Command/_cdrdao,
	Completion/Unix/Command/_devtodo, Completion/Unix/Command/_feh,
	Completion/Unix/Command/_global, Completion/Unix/Command/_groff,
	Completion/Unix/Command/_growisofs,
	Completion/Unix/Command/_initctl, Completion/Unix/Command/_iostat,
	Completion/Unix/Command/_ip, Completion/Unix/Command/_java,
	Completion/Unix/Command/_localedef, Completion/Unix/Command/_make,
	Completion/Unix/Command/_mencal, Completion/Unix/Command/_module,
	Completion/Unix/Command/_nkf, Completion/Unix/Command/_nmap,